--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 
 /* like qlik objects  */
 
-body>h1 {
+h1.mainTitle {
     padding-left: 10px;
     font-family: 'Roboto', sans-serif;
 }
@@ -79,64 +79,93 @@ article>h1.action {
     height: 300px;
 }
 
-
 /* =================================================== */
+
 /* SCROLLSPY */
+
 #scrollspy {
-        width: 160px; 
-        position: fixed; 
-        z-index: 1; /* Stay on top */
-        top: 30%; 
-        right: 0;
-        overflow-x: hidden; /*Disable horizontal scroll */
+    width: 160px;
+    position: fixed;
+    z-index: 1;
+    /* Stay on top */
+    top: 30%;
+    right: 0;
+    overflow-x: hidden;
+    /*Disable horizontal scroll */
 }
 
-
 /* =================================================== */
+
 /* NOT WORKING!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+
 /* PUSHPIN (qlik selection always on top) */
- /* Only necessary for window height sized blocks. */
-  html, body, .pushpinElm {
+
+/* Only necessary for window height sized blocks. */
+
+html, body, .pushpinElm {
     height: 100%;
-  }
+}
 
-   /* Class for when element is above threshold */
-  .pin-top {
+/* Class for when element is above threshold */
+
+.pin-top {
     position: relative;
-  }
+}
 
-   /* Class for when element is below threshold */
-  .pin-bottom {
+/* Class for when element is below threshold */
+
+.pin-bottom {
     position: relative;
-  }
+}
 
-   /* Class for when element is pinned */
-  .pinned {
+/* Class for when element is pinned */
+
+.pinned {
     position: fixed !important;
-  }
-  /* ------------------------------------------------- */
+}
+
+/* ------------------------------------------------- */
 
 /* ABOVE NOT WORKING */
-/* USE THIS INSTEAD */
-  /* fixedHeaderOnScroll */
-  
-  /* The sticky class is added to the header with JS when it reaches its scroll position */
-  .fixedHeaderOnScroll {
-      z-index: 1;
-      background-color: grey;
-      overflow: hidden;
-      height: 38px;
-  }
 
-  /* <div style="border: 3px solid rgb(201, 0, 1); overflow: hidden; margin: 15px auto; max-width: 736px;">
-  style="border: 0px none; margin-left: -185px; height: 859px; margin-top: -533px; width: 926px;"> */
- 
-  
-  .sticky {
+/* USE THIS INSTEAD */
+
+/* fixedHeaderOnScroll */
+
+/* The sticky class is added to the header with JS when it reaches its scroll position */
+
+.fixedHeaderOnScroll {
+    z-index: 1;
+    background-color: grey;
+    overflow: hidden;
+    max-height: 46px;
+    max-width: 100%;
+    /* border-radius: 10px; */
+    background-color: rgb(75, 68, 68);
+}
+
+.sticky {
     position: fixed;
     top: 0;
     width: 100%;
-    /* height: 100%; */
-  }
-  
-  
+    left: 0;
+}
+
+#companyLogos {
+    background-color: red;
+    height: 100%;
+    padding: 100px;
+}
+
+/* default: 500px */
+
+/* .parallax-container {
+    height: 500px;
+  } */
+
+#companyLogosRow {
+    height: 60px;
+    margin-left: 10px;
+    /* padding-top: 10px; */
+    /* border-top: 0.5px solid grey; */
+}
