--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,24 @@
+/* google font
+font-family: 'Roboto', sans-serif;
+font-family: 'Lato', sans-serif;
+font-family: 'Oswald', sans-serif;
+*/
+
+
 * {
     margin: 0;
     padding: 0;
 }
 
-/* google font
-font-family: 'Roboto', sans-serif;
-font-family: 'Lato', sans-serif;
-*/
 
 .gridContainer {
     display: grid;    
-    grid-template-columns: 8% 50% 34% 8% ;
+    grid-template-columns: 9% 68% 14% 9% ;
     grid-template-rows: auto;
     grid-template-areas: 
         "top top top top"
-        "leftSpace main aside rightSpace";
+        "leftSpace main aside rightSpace"
+        "footer footer footer footer";
 }
 
 .gridItem-top {
@@ -29,21 +33,26 @@ font-family: 'Lato', sans-serif;
     grid-area: main;
 }
 
+.grid-item-footer {
+    grid-area: footer;
+}
+
 .gridItem-aside {
     grid-area: aside;
+    border-color: #e1e1e1;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    border-left-style: solid;
+    border-left-width: 1px;
+    overflow: hidden;
+    display: block;
+    margin-top: 85px;
 }
 
 .gridItem-rightSpace {
     grid-area: rightSpace;
 }
 
-
-body {
-    /* width: 800px; */
-    /* margin: auto; */
-}
-
-/* like qlik objects  */
 
 h1.mainTitle {
     padding-left: 10px;
@@ -114,14 +123,15 @@ article>h1.action {
 /* =================================================== */
 
 /* SCROLLSPY */
-
+/* position fixed is actually not inside the aside (visually) */
 #scrollspy {
     width: 160px;
     position: fixed;
     z-index: 1;
     /* Stay on top */
-    top: 30%;
-    right: 0;
+    top: 45%;
+    right: 4%;
+    /* right: 100px; */
     overflow-x: hidden;
     /*Disable horizontal scroll */
 }
@@ -269,7 +279,7 @@ nav>ul>li>a {
     color: #7d7d7d;
 }
 
-a>span {
+ul > li > a > span {
     border-left: solid #d1d1d1 1px;
     vertical-align: baseline;
     box-sizing: border-box;
@@ -318,3 +328,20 @@ a>span {
     transform: translateY(-50%);
 }
 /* --------------------------------------------- */
+
+
+
+/* ================================================= */
+/* MEDIA QUERIES */
+
+/* hide scrollspy */
+@media only screen and (max-width: 900px) {
+    
+   #scrollspy {
+       visibility: hidden;
+   } 
+
+   .gridItem-aside {
+       border: none;
+   }
+  }
