--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,11 @@ h1.mainTitle {
     width: 800px;
 }
 
+.fastestLap {
+    /* height: 1900px; */
+    /* width: 800px; */
+}
+
 
 .flexContainer-stats-1 {
     display: flex;
@@ -153,10 +158,14 @@ article>h1.action {
     /* like qlik objects  */
 }
 
+.collapsible-header {
+/* width: 400px; */
+}
+
 .collapsible-body {
     padding: 0;
     margin: 0;
-    height: 300px;
+    height: 200px;
 }
 
 /* =================================================== */
