--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ h1.mainTitle {
 /* ===================================================== */
 
 /* STATS */
+
 .statsSheet {
     height: 700px;
     width: 800px;
@@ -93,7 +94,6 @@ h1.mainTitle {
     /* height: 1900px; */
     /* width: 800px; */
 }
-
 
 .flexContainer-stats-1 {
     display: flex;
@@ -130,10 +130,9 @@ h1.mainTitle {
 
 #welcome {
     margin: 10px 0 0 13px;
-    
 }
 
-#welcome > h1 {
+#welcome>h1 {
     font-size: 1.4em;
     margin-top: 50px;
 }
@@ -159,7 +158,7 @@ article>h1.action {
 }
 
 .collapsible-header {
-/* width: 400px; */
+    /* width: 400px; */
 }
 
 .collapsible-body {
@@ -287,13 +286,18 @@ html, body, .pushpinElm {
     display: block;
     background-color: #ffffff;
     color: #000000;
-
+    width: 100%;
+    /* width: 100%; */
     display: flex;
+    /* TODO NOT WORKING */
+    justify-content: space-between;
 }
 
 .rightSideIcons {
     background-color: yellow;
 }
+
+
 
 .c1websiteHeader-middle nav ul li {
     height: 70px;
@@ -350,10 +354,32 @@ ul>li>a>span {
 #c1websiteHeader-logo {
     /* float: left; */
     /* margin-right: 80px; */
-    margin-left: 25px;
-    
+    /* margin-left: 25px; */
+    /* margin-right: 100px; */
+    /* flex: 1; */
+    max-height: 100%;
+    max-width: 100%;
+}
+
+.logoImg {
+   height: 100%;
+   width: 500px;
     flex: 1;
-    height: 100%;
+}
+
+.topBarMenu {
+    /* width: 100%; */
+    /* background-color: red; */
+    text-align: right;
+    /* flex-grow: 3; */
+    max-width: 800px;
+    /* Or whatever */
+    /* margin: auto;  */
+}
+
+.searchIcon>a>i, .basketIcon>a>i {
+    font-size: 150%;
+    /* padding: */
 }
 
 .c1websiteHeader-lower {
@@ -390,11 +416,15 @@ ul>li>a>span {
 .searchIcon {
     color: #7d7d7d;
     font-size: 130%;
+    margin-top: 3px;
 }
 
 .cartIcon {
+    margin-top: 6px;
     color: black;
-    font-size: 130%;
+    border-right: .5px solid #d8d6d6;
+    border-left: .5px solid #d8d6d6;
+    padding: 0 35px 0 35px;
 }
 
 .socialIcon {
@@ -421,6 +451,7 @@ ul>li>a>span {
 }
 
 /* TODO: NOT WORKING */
+
 .lastSocialItem {
     border-right: none;
 }
