--- a/css/style.css
+++ b/css/style.css
@@ -542,6 +542,13 @@ ul>li>a>span {
     border-right: .5px solid #d8d6d6;
 }
 
+
+/* CHANGES  */
+/* #positionAnalysis {
+    width: 500px;
+} */
+
+
 /* TODO: NOT WORKING */
 
 .lastSocialItem {
