hide content if no race selected; needs js to change property of class

--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,16 @@ h1.mainTitle {
     color: grey;
 }
 
+
+
+/* hide all content if no circuit and session is selected */
+.hideAllIfNoRaceSelected, .hideAllIfNoRaceSelected * {
+    display: none;
+}
+
+
+
+
 /* ===================================================== */
 
 /* PARALLAX VIZLIB */
