--- a/css/style.css
+++ b/css/style.css
@@ -605,6 +605,12 @@ ul>li>a>span {
     display: none;
 }
 
+
+/* ==================================================== */
+/* FOOTER */
+/* see seperate css file */
+
+
 /* --------------------------------------------- */
 
 /* ================================================= */
